# VAR2026

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  run_practica2.sh
install/: local_setup.sh  setup.sh
install/nav_genetic/lib/nav_genetic/: ga_train  run_best  wall_follower
install/nav_genetic/share/nav_genetic/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot_gazebo_multiple/lib/turtlebot_gazebo_multiple/: depth_camera_info_publisher  robot_description_topic_publisher
install/turtlebot_gazebo_multiple/share/ament_index/resource_index/package_run_dependencies/: turtlebot_gazebo_multiple
install/turtlebot_gazebo_multiple/share/ament_index/resource_index/parent_prefix_path/: turtlebot_gazebo_multiple
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/cmake/: turtlebot_gazebo_multipleConfig-version.cmake  turtlebot_gazebo_multipleConfig.cmake
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/launch/: create_multi_robot.launch.py
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/models/turtlebot3_waffle_kinect/: model.config  model.sdf
install/turtlebot_gazebo_multiple/share/turtlebot_gazebo_multiple/worlds/: Actors_GrannyAnnie.world
install/turtlebot_gazebo_race/lib/turtlebot_gazebo_race/: autonomous_driver.py  depth_camera_info_publisher  robot_description_topic_publisher  safe_cmd_vel.py
install/turtlebot_gazebo_race/share/turtlebot_gazebo_race/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot_gazebo_race/share/turtlebot_gazebo_race/cmake/: turtlebot_gazebo_raceConfig-version.cmake  turtlebot_gazebo_raceConfig.cmake
install/turtlebot_gazebo_race/share/turtlebot_gazebo_race/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot_gazebo_race/share/turtlebot_gazebo_race/launch/: create_multi_robot_race.launch.py
install/turtlebot_gazebo_race/share/turtlebot_gazebo_race/worlds/: race.sdf
log/: latest_build
ros2_ws/: launch_all.sh
ros2_ws/get_pointclouds/: CMakeLists.txt  package.xml
ros2_ws/get_pointclouds/rviz/: pointclouds.rviz
ros2_ws/get_pointclouds/src/: node.cpp
ros2_ws/nav_genetic/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/nav_genetic/nav_genetic/: controller.py  controller_NO.py  ga_train.py  monitor.py  run_best.py  vuelta_vuelta.py
ros2_ws/navigator/: CMakeLists.txt  package.xml
ros2_ws/turtlebot_gazebo_multiple/: CMakeLists.txt
ros2_ws/turtlebot_gazebo_multiple/launch/: create_multi_robot.launch.py
ros2_ws/turtlebot_gazebo_multiple/src/: robot_description_topic_publisher.cpp
ros2_ws/turtlebot_gazebo_multiple/worlds/: Actors_GrannyAnnie.world
ros2_ws/turtlebot_gazebo_race/: CMakeLists.txt  package.xml  setup.py
ros2_ws/turtlebot_gazebo_race/launch/: create_multi_robot_race.launch.py
ros2_ws/turtlebot_gazebo_race/models/turtlebot3_waffle_kinect/: model.config  model.sdf
ros2_ws/turtlebot_gazebo_race/scripts/: autonomous_driver.py  safe_cmd_vel.py
ros2_ws/turtlebot_gazebo_race/src/: depth_camera_info_publisher.cpp
ros2_ws/turtlebot_gazebo_race/worlds/: race.sdf
ros2_ws/vision_robotica/: wander.cpp
(+4 files in other folders)
