<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_genetic</name>
  <version>0.1.0</version>
  <description>
    Navegación del Turtlebot3 para la práctica VAR-2 (carrera).
    Wall-follower con PID cuyos parámetros se optimizan mediante Algoritmo
    Genético.
  </description>
  <maintainer email="marina@ua.es">Marina</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
